[FIX] more linting

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="mb-5 mb-lg-0 text-center text-lg-start">
             <h1 class="display-1 lh-1 mb-3">Zivile Kairyte</h1>
             <p class="lead fw-normal mb-5">
-              I’m a digital marketing and communications professional with over 6 years of experience across both
+              I'm a digital marketing and communications professional with over 6 years of experience across both
               startups and international organizations.
               I specialize in website management, social media, email campaigns, and social content strategies.
               Skilled in crafting clear and compelling value propositions for diverse audiences and managing multiple
@@ -145,7 +145,7 @@
                           <li>Created marketing materials (presentations, one-pagers, case
                             studies) for marketing campaigns.</li>
                           <li>Responsible for account based marketing campaigns (lead
-                            acquisition, events, webinars, email marketing and socials),
+                            acquisition, events, webinars, email marketing and socials)w,
                             achieving 30% annual audience growth.</li>
                           <li>Analysed market trends, competitors, and industry to support
                             strategic communication initiatives. </li>
@@ -178,7 +178,7 @@
                     <div class="col-lg-8">
                       <div>
                         <div class="mb-3">
-                          Commissioner’s Sinkevicius cabinet covers these topics: Circular
+                          Commissioner's Sinkevicius cabinet covers these topics: Circular
                           Economy, Chemicals Strategy for Sustainability, Hydrogen Strategy,
                           Biodiversity Strategy. Reported directly to the Head of Cabinet.
                         </div>
@@ -254,7 +254,7 @@
                           I contributed part-time to a news website focused on informing readers
                           about cryptocurrency trends, news, and market developments.
                           My primary responsibilities involved setting up, creating, and
-                          expanding the website’s social media presence, driving audience growth
+                          expanding the website's social media presence, driving audience growth
                           and engagement.
                         </div>
                         <ul>
@@ -303,6 +303,7 @@
                   </div>
                 </div>
               </div>
+            </div>
           </section>
           <!-- Education Section-->
           <section id="education" class="pt-1 pb-1">
